# metaDMG-paper

./: .gitignore  .gitmodules  README.md  inline-submodules.sh
figures/: dashboard.psd
metaDMG-paper-metagenomic-simulations/: .gitignore  README.md  create_lca_test_plots.py  create_simulation_comparison.py  create_viz_overview.py  df_all.parquet  metaDMG-cpp  plot_utils.py  pyproject.toml  utils.py
metaDMG-paper-real-data/: analysis.py  plotstyle.mplstyle  pyproject.toml
metaDMG-paper-single-genomic-simulations/: .gitignore  analysis.py  extract_damaged_reads.sh  generate_contigs.py  merge_results.py  move_old_files.sh  ngsngs  plot.py  pyproject.toml  readme.md  run.sh  run_pydamage.sh  run_truth_damage.sh  utils.py
metaDMG-paper-single-genomic-simulations/Test_Examples/: Mycobacterium_leprae.fa  Mycobacterium_leprae.fa.gz.fai  Mycobacterium_leprae.fa.gz.gzi
metaDMG-paper-single-genomic-simulations/figures/: combine-pydamage-comparison.sh
other/: data-location.txt  metaDMGsamplelist.xlsx  methods-in-ecology-and-evolution-guidelines.docx  mikkel_script.sh  simulation_sketch.pptx  workflow.sh
