[tool.poetry]
name = "real-data"
version = "0.1.0"
description = ""
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]
readme = "README.md"
packages = [{include = "real_data"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
metadmg = {version = "^0.37.1", extras = ["all"]}
seaborn = "^0.12.1"
scipy = "^1.9.3"
scikit-learn = "^1.1.3"
numpyro = "^0.10.1"
arviz = "^0.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
