[tool.poetry]
name = "ngsngs-analysis"
version = "0.1.0"
description = ""
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]
readme = "README.md"
packages = [{include = "ngsngs_analysis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.0"
metadmg = {version = "^0.35.7", extras = ["all"]}
matplotlib = "^3.6.0"
tqdm = "^4.64.1"
seaborn = "^0.12.0"
dill = "^0.3.5.1"
cloudpickle = "^2.2.0"
graphviz = "^0.20.1"
pygraphviz = "^1.10"
ipywidgets = "^8.0.2"
pydamage = "^0.70"
niceplots = "^1.3.0"
arviz = "^0.13.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
